# RayCaster

./: CMakeLists.txt  README.md  main.c
src/: draw_map.c  draw_map.h  draw_player.c  draw_player.h  draw_rays.c  draw_rays.h  draw_rays_old.c  globals.c  globals.h  init_game.c  init_game.h  map.c  map.h  utils.c  utils.h
